--- a/index.html
+++ b/index.html
@@ -17,38 +17,32 @@
 
 </nav>
 
+<div class="line"></div>
+
 <div class="container">
     <div class="text-container">
 
         <div class="text">
-        <h2>Hello, me here</h2>
-        <h1>My name is Markos Paltser</h1>
-        <h2>and I am a <span>upcoming developer</span>.</h2>
-        <p>some text mida ma prg ei tea kirjutda</p>
+            <h2>Hello, me here</h2>
+            <h1>My name is <span>Markos Paltser</span></h1>
+            <h2>and I am a <span class="blue">upcoming developer</span>.</h2>
+            <p>some text mida ma prg ei tea kirjutda</p>
         </div>
 
         <div class="cv-download">
-            <button class="botao">
-                <svg width="24px" height="24px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="mysvg"><g id="SVGRepo_bgCarrier" stroke-width="0">
-                </g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier">
-                    <g id="Interface / Download">
-                        <path id="Vector" d="M6 21H18M12 3V17M12 17L17 12M12 17L7 12" stroke="#f1f1f1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        </path>
-                    </g> </g>
-                </svg>
-                <span class="texto">Download my CV</span>
-            </button>
+            <button class="buttons raise" onclick="window.location.href = 'Markos_Paltser_CV.pdf';">View my CV</button>
+
         </div>
 
     </div>
     <div class="image-container">
-<img src="pilt.png" alt="Markos Paltser">
+        <img src="pilt.png" alt="Markos Paltser">
     </div>
-
 
 
 </div>
 </body>
+
 
 
 <script src="https://kit.fontawesome.com/be49346d7d.js" crossorigin="anonymous"></script>
