--- a/about_me.html
+++ b/about_me.html
@@ -7,25 +7,58 @@
 </head>
 <body>
 <nav>
-    <h3 class="nav-text">Portfolia</h3>
+    <h3 class="nav-text">Portfolio</h3>
     <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="#">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contacts</a>
+        <button class='buttons up' onclick="window.location.href ='index.html';">Home</button>
+        <button class='buttons up' onclick="window.location.href ='#';">About</button>
+        <button class='buttons up' onclick="window.location.href ='projects.html';">Projects</button>
+        <button class='buttons up' onclick="window.location.href ='contact.html';">Contacts</button>
     </div>
+
 </nav>
 
 <div class="container">
-    <h1>About Me</h1>
-    <div class="about-text">
+        <div class="story-text">
+            <h1>My Story</h1>
 
-    </div>
+            <p>
+                lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </p>
 
+        </div>
     <div class="skills">
-
+        <h1>My Skills</h1>
+        <div class="skill-container">
+            <div class="skill">
+                <h2>HTML</h2>
+                <div class="skill-bar">
+                    <div class="skill-level html">75%</div>
+                </div>
+            </div>
+            <div class="skill">
+                <h2>CSS</h2>
+                <div class="skill-bar">
+                    <div class="skill-level css">60%</div>
+                </div>
+            </div>
+            <div class="skill">
+                <h2>JavaScript</h2>
+                <div class="skill-bar">
+                    <div class="skill-level js">50%</div>
+                </div>
+            </div>
+            <div class="skill">
+                <h2>Python</h2>
+                <div class="skill-bar">
+                    <div class="skill-level python">40%</div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+    </div>
+
+
+
 
 
 </body>
