--- a/contact.html
+++ b/contact.html
@@ -7,22 +7,26 @@
 </head>
 <body>
 <nav>
-    <h3 class="nav-text">Portfolia</h3>
+    <h3 class="nav-text">Portfolio</h3>
     <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about_me.html">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="#">Contacts</a>
+        <button class='buttons up' onclick="window.location.href ='index.html';">Home</button>
+        <button class='buttons up' onclick="window.location.href ='about_me.html';">About</button>
+        <button class='buttons up' onclick="window.location.href ='projects.html';">Projects</button>
+        <button class='buttons up' onclick="window.location.href ='#';">Contacts</button>
     </div>
+
 </nav>
 
 <div class="container">
-    <div class="text-container">
-        <h1>Hi, I'm Markos Paltser</h1>
-        <p>I'm an upcoming software developer.</p>
+    <div class="contacts-container">
+        <h1>Contacts</h1>
+        <div class="contact">
+            <p><i class="fas fa-envelope"></i><a href="mailto:markospaltser@gmail.com">markospaltser@gmail.com</a></p>
+            <p><i class="fa-solid fa-phone"></i>+372 5770 4578</p>
+            <p><i class="fa-solid fa-location-pin"></i>Tartu, Estonia</p>
+            <p><i class="fa-brands fa-github"></i><a href="https://github.com/Paltser">github.com/Paltser</a></p>
 
-    </div>
-    <div class="image-container">
+        </div>
 
     </div>
 </div>
