--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
 </head>
 <body>
 <nav>
-    <h3 class="nav-text">Portfolio</h3>
+<h3 class="nav-text">Portfolio</h3>
     <div class="nav-links">
-        <a href="#">Home</a>
-        <a href="about_me.html">About</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contacts</a>
+        <button class='buttons up' onclick="window.location.href ='#';">Home</button>
+        <button class='buttons up' onclick="window.location.href ='about_me.html';">About</button>
+        <button class='buttons up' onclick="window.location.href ='projects.html';">Projects</button>
+        <button class='buttons up' onclick="window.location.href ='contact.html';">Contacts</button>
     </div>
 
 </nav>
 
 <div class="line"></div>
+
+
 
 <div class="container">
     <div class="text-container">
@@ -30,13 +32,13 @@
         </div>
 
         <div class="cv-download">
-            <button class="buttons raise" onclick="window.location.href = 'Markos_Paltser_CV.pdf';">View my CV</button>
+            <button class="buttons raise" onclick="window.location.href = 'files/Markos_Paltser_CV.pdf';">View my CV</button>
 
         </div>
 
     </div>
     <div class="image-container">
-        <img src="pilt.png" alt="Markos Paltser">
+        <img src="files/pilt.png" alt="Markos Paltser">
     </div>
 
 
