--- a/projects.html
+++ b/projects.html
@@ -7,13 +7,14 @@
 </head>
 <body>
 <nav>
-  <h3 class="nav-text">Portfolia</h3>
+  <h3 class="nav-text">Portfolio</h3>
   <div class="nav-links">
-    <a href="index.html">Home</a>
-    <a href="about_me.html">About</a>
-    <a href="#">Projects</a>
-    <a href="contact.html">Contacts</a>
+    <button class='buttons up' onclick="window.location.href ='index.html';">Home</button>
+    <button class='buttons up' onclick="window.location.href ='about_me.html';">About</button>
+    <button class='buttons up' onclick="window.location.href ='#';">Projects</button>
+    <button class='buttons up' onclick="window.location.href ='contact.html';">Contacts</button>
   </div>
+
 </nav>
 
 <div class="container">
