near the finish line

--- a/about_me.html
+++ b/about_me.html
@@ -18,14 +18,19 @@
 </nav>
 
 <div class="container">
-        <div class="story-text">
-            <h1>My Story</h1>
+    <div class="story-text">
+        <h1>My Story</h1>
 
-            <p>
-                lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            </p>
+        <p>
+            My name is Markos, and at 18, I'm diving headfirst into the world of software development. Unlike seasoned
+            pros who might chase deadlines, I'm fueled by a different kind of drive: insatiable curiosity. Every line of
+            code is a window into how things tick, a puzzle waiting to be unraveled. I might spend hours tinkering,
+            exploring every nook and cranny, sometimes losing sight of the finish line. But for me, the journey of
+            understanding is the true reward.
+        </p>
 
-        </div>
+    </div>
+
     <div class="skills">
         <h1>My Skills</h1>
         <div class="skill-container">
@@ -55,10 +60,8 @@
             </div>
         </div>
     </div>
-    </div>
 
-
-
+</div>
 
 
 </body>
