--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <nav>
-<h3 class="nav-text">Portfolio</h3>
+    <h3 class="nav-text">Portfolio</h3>
     <div class="nav-links">
         <button class='buttons up' onclick="window.location.href ='#';">Home</button>
         <button class='buttons up' onclick="window.location.href ='about_me.html';">About</button>
@@ -20,7 +20,6 @@
 <div class="line"></div>
 
 
-
 <div class="container">
     <div class="text-container">
 
@@ -28,11 +27,11 @@
             <h2>Hello, me here</h2>
             <h1>My name is <span>Markos Paltser</span></h1>
             <h2>and I am a <span class="blue">upcoming developer</span>.</h2>
-            <p>some text mida ma prg ei tea kirjutda</p>
         </div>
 
         <div class="cv-download">
-            <button class="buttons raise" onclick="window.location.href = 'files/Markos_Paltser_CV.pdf';">View my CV</button>
+            <button class="buttons raise" onclick="window.location.href = 'files/Markos_Paltser_CV.pdf';">View my CV
+            </button>
 
         </div>
 
@@ -44,7 +43,6 @@
 
 </div>
 </body>
-
 
 
 <script src="https://kit.fontawesome.com/be49346d7d.js" crossorigin="anonymous"></script>
