--- a/projects.html
+++ b/projects.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
-  <title>Portfolia</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <title>Portfolia</title>
 </head>
 <body>
 <nav>
-  <h3 class="nav-text">Portfolio</h3>
-  <div class="nav-links">
-    <button class='buttons up' onclick="window.location.href ='index.html';">Home</button>
-    <button class='buttons up' onclick="window.location.href ='about_me.html';">About</button>
-    <button class='buttons up' onclick="window.location.href ='#';">Projects</button>
-    <button class='buttons up' onclick="window.location.href ='contact.html';">Contacts</button>
-  </div>
+    <h3 class="nav-text">Portfolio</h3>
+    <div class="nav-links">
+        <button class='buttons up' onclick="window.location.href ='index.html';">Home</button>
+        <button class='buttons up' onclick="window.location.href ='about_me.html';">About</button>
+        <button class='buttons up' onclick="window.location.href ='#';">Projects</button>
+        <button class='buttons up' onclick="window.location.href ='contact.html';">Contacts</button>
+    </div>
 
 </nav>
 
-<div class="container">
-  <div class="text-container">
-    <h1>Hi, I'm Markos Paltser</h1>
-    <p>I'm an upcoming software developer.</p>
+<div class="container-project">
+    <h1>Projects</h1>
+    <div class="text-container-project">
+        <div class="project">
+            <div class="projet-text">
+                <h1>Recycle!!!</h1>
+                <p>An indie game that was made in Unity to spread environmental awareness. In that game, you play as a
+                    garbage collector and your job is to sort all the random trash spawning throughout the world,
+                    each time you sort correctly you get a point and wrongly sorting will deduct that point. The game
+                    offers parkour mechanics and also a few Easter eggs.</p>
 
-  </div>
-  <div class="image-container">
+                <button class="buttons raise" onclick="window.location.href = 'https://kristjan303.itch.io/prgi';">View
+                    the project
+                </button>
+            </div>
 
-  </div>
+            <div class="project-img">
+                <a href="https://kristjan303.itch.io/prgi"><img src="./files/recycle.gif" alt="Recycle!!!"></a>
+            </div>
+        </div>
+        <div class="project">
+            <div class="projet-text">
+                <h1>Aastategija 2024</h1>
+                <p>In the Aastategija 2024 Programming competition, students work in teams to create a website that
+                    meets the specific requirements of a client. This competition provided students with the opportunity
+                    to showcase their skills in web development, teamwork, and problem solving.
+
+                </p>
+
+                <button class="buttons raise"
+                        onclick="window.location.href = 'https://m13.at24.ikt.khk.ee/aastategija24/';">View the project
+                </button>
+            </div>
+
+            <div class="project-img">
+                <a href="https://m13.at24.ikt.khk.ee/aastategija24/"><img src="./files/aastategija2024.png"
+                                                                          alt="Recycle!!!"></a>
+            </div>
+        </div>
+
+    </div>
 </div>
 
 </body>
