--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     </div>
     <div class="image-container">
-        <img src="files/pilt.png" alt="Markos Paltser">
+        <img src="files/pilt.jpg" alt="Markos Paltser">
     </div>
 
 
