Added some projects and changed CV

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="cv-download">
-            <button class="buttons raise" onclick="window.location.href = 'files/Markos_Paltser_CV.pdf';">View my CV
+            <button class="buttons raise" onclick="window.location.href = 'files/MarkosPaltser_CV.pdf';">View my CV
             </button>
 
         </div>
