--- a/projects.html
+++ b/projects.html
@@ -57,6 +57,40 @@
             </div>
         </div>
 
+        <div class="project">
+            <div class="projet-text">
+                <h1>Voco Liikumine</h1>
+                <p>
+                    The goal of the project is to create an online application that would make it easier for teachers of the sports department in Tartu Vocational College  to organize training sessions and for students to follow them. The project is still under development and is expected to launch in early April 2024
+                </p>
+
+                <button class="buttons raise" onclick="window.location.href = 'https://github.com/Kristjan303/voco-liikumine';">View the
+                    project
+                </button>
+            </div>
+
+            <div class="project-img">
+                <a href="https://github.com/Kristjan303/voco-liikumine"><img src="./files/VocoLiikumine.png" alt="VocoLiikumine"></a>
+            </div>
+        </div>
+
+        <div class="project">
+            <div class="projet-text">
+                <h1>Weather App</h1>
+                <p>
+                    A simple weather app that uses the OpenWeatherMap API to display the current weather in a given location.
+                </p>
+
+                <button class="buttons raise" onclick="window.location.href = 'https://paltsermarkos.ikt.khk.ee/veebiarendus/ilm/';">View the
+                    project
+                </button>
+            </div>
+
+            <div class="project-img">
+                <a href="https://paltsermarkos.ikt.khk.ee/veebiarendus/ilm/"><img src="./files/weatheraapp.png" alt="VocoLiikumine"></a>
+            </div>
+        </div>
+
     </div>
 </div>
 
