added new porject to porjects page.

--- a/projects.html
+++ b/projects.html
@@ -90,6 +90,13 @@
                 <a href="https://paltsermarkos.ikt.khk.ee/veebiarendus/ilm/"><img src="./files/weatheraapp.png" alt="VocoLiikumine"></a>
             </div>
         </div>
+        <div class="project">
+            <div class="projet-text">
+                <h1>Intership at Tarmetec</h1>
+                <p>
+                    During my internship at Tarmetec, I worked as a programmer, gaining hands-on experience in software development and problem-solving. I collaborated with a dynamic team to design, code, and test software solutions that streamlined internal processes. My role involved working with different programming languages like php, javascript, hmtl, mysql and others. Debugging code, and ensuring optimal performance of the applications we developed. This opportunity enhanced my technical skills, taught me agile development practices, and improved my ability to work in a fast-paced, real-world environment.
+                </p>
+        </div>
 
     </div>
 </div>
