Added new skills to about me.

--- a/about_me.html
+++ b/about_me.html
@@ -58,6 +58,18 @@
                     <div class="skill-level python">40%</div>
                 </div>
             </div>
+            <div class="skill"></div>
+                <h2>php</h2>
+                <div class="skill-bar">
+                    <div class="skill-level php">35%</div>
+                </div>
+            </div>
+            <div class="skill"></div>
+                <h2>mysql</h2>
+                <div class="skill-bar">
+                    <div class="skill-level mysql">60%</div>
+                </div>
+            </div>
         </div>
     </div>
 
